@@ -722,6 +722,33 @@ public:
 	//@}
 	/***************************************************************************/
 
+       /***************************************************************************/
+
+    /** Apply a collection of cuts.
+
+    Only cuts which have an <code>effectiveness >= effectivenessLb</code>
+    are applied.
+    <ul>
+      <li> ReturnCode.getNumineffective() -- number of cuts which were
+           not applied because they had an
+           <code>effectiveness < effectivenessLb</code>
+      <li> ReturnCode.getNuminconsistent() -- number of invalid cuts
+      <li> ReturnCode.getNuminconsistentWrtIntegerModel() -- number of
+           cuts that are invalid with respect to this integer model
+      <li> ReturnCode.getNuminfeasible() -- number of cuts that would
+           make this integer model infeasible
+      <li> ReturnCode.getNumApplied() -- number of integer cuts which
+           were applied to the integer model
+      <li> cs.size() == getNumineffective() +
+             getNuminconsistent() +
+             getNuminconsistentWrtIntegerModel() +
+             getNuminfeasible() +
+             getNumApplied()
+    </ul>
+    */
+    virtual OsiSolverInterface::ApplyCutsReturnCode applyCuts(const OsiCuts & cs,
+            double effectivenessLb = 0.0);
+
 protected:
 
 	/**@name Protected methods */
